--- a/index.html
+++ b/index.html
@@ -6,16 +6,140 @@
   <title>Biker-Zone</title>
   <link href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css" rel="stylesheet" type="text/css" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- google font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <style>
+    .font-poppins{
+      font-family: 'Poppins', sans-serif;
+    }
+  </style>
+  <!-- tailwind custom classes -->
+  <script>
+    tailwind.config ={
+      theme: {
+        extend: {
+          colors: {
+            clifford: '#da373d',
+            'bike-primary-bg': 'rgba(231, 111, 81, 0.10)',
+          }
+        }
+      }
+    }
+  </script>  
 </head>
 <body>
-    <header>
+    <header class="md:container md:mx-auto">
+      <nav class="mt-8">
+        <div class="navbar bg-[#FFF] font-bold">
+          <div class="flex-1">
+            <div class="dropdown">
+              <label tabindex="0" class="btn btn-ghost lg:hidden">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+              </label>
+              <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 text-[#000] font-medium	">
+                <li><a>Home</a></li>
+                <li><a>Shop</a></li>
+                <li><a>News</a></li>
+                <li><a>Contact </a></li>
+                
+              </ul>
+            </div>
+            <a class="btn btn-ghost normal-case text-xl font-extrabold text-[#000]">Bike Dekho</a>
+          </div>
+          <div class="navbar-center hidden lg:flex">
+            <ul class="menu menu-horizontal px-1 text-[#000] font-medium	">
+                <li><a>Home</a></li>
+                <li><a>Shop</a></li>
+                <li><a>News</a></li>
+                <li><a>Contact </a></li>
+            </ul>
+          </div>
+          <div class="">
+            <a class="btn btn-error text-[#FFF]">Login</a>
+          </div>
+        </div>
+      </nav>
 
+      <!-- nav-bar-end -->
+      <div class="carousel w-full lg:h-[550px] bg-bike-primary-bg">
+        <!-- slide-1 -->
+        <div id="slide1" class="carousel-item relative w-full">
+            <div class="flex flex-col lg:flex-row lg:p-4 gap-20 p-24 ">
+              <div class="space-y-7 flex-1">
+                <h1 class="text-6xl font-bold">Ride-one R15 V4 <br> with Smile</h1>
+                <p>Amet mllnlm mollit non deserunt ullamco est sit allqua dolor do amet sint.Vellt afficia consequat duis enim vellt mollit</p>
+                <button class="btn btn-error normal-case text-xl font-bold text-[#ececec]">PURCHASE</button>
+               </div>
+               <div class="flex-1">
+                <img src="/images/slider/bike1.png" class="w-[400px]" />
+               </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide4" class="btn btn-circle">❮</a> 
+                <a href="#slide2" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+        </div> 
+         <!-- slide-2 -->
+        <div id="slide2" class="carousel-item relative w-full">
+          <div class="flex flex-col lg:flex-row lg:p-4 gap-20 p-24">
+            <div class="space-y-7 flex-1">
+              <h1 class="text-6xl font-bold">Ride-one R15 V4 <br> with Smile</h1>
+              <p>Amet mllnlm mollit non deserunt ullamco est sit allqua dolor do amet sint.Vellt afficia consequat duis enim vellt mollit</p>
+              <button class="btn btn-error normal-case text-xl font-bold text-[#ececec]">PURCHASE</button>
+             </div>
+            <div class="flex-1">
+              <img src="/images/slider/bike2.png" class="w-[400px]" />
+            </div>
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide1" class="btn btn-circle">❮</a> 
+              <a href="#slide3" class="btn btn-circle">❯</a>
+            </div>
+          </div>
+        </div> 
+         <!-- slide-3 -->
+        <div id="slide3" class="carousel-item relative w-full">
+          <div class="flex flex-col lg:flex-row lg:p-4 gap-20 p-24">
+            <div class="space-y-7 flex-1">
+              <h1 class="text-6xl font-bold">Ride-one R15 V4 <br> with Smile</h1>
+              <p>Amet mllnlm mollit non deserunt ullamco est sit allqua dolor do amet sint.Vellt afficia consequat duis enim vellt mollit</p>
+              <button class="btn btn-error normal-case text-xl font-bold text-[#ececec]">PURCHASE</button>
+             </div>
+            <div class="flex-1">
+              <img src="/images/slider/bike3.png" class="w-[400px]" />
+            </div>
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide2" class="btn btn-circle">❮</a> 
+              <a href="#slide4" class="btn btn-circle">❯</a>
+            </div>
+          </div>
+        </div> 
+         <!-- slide-4 -->
+        <div id="slide4" class="carousel-item relative w-full">
+           <div class="flex flex-col lg:flex-row lg:p-4 gap-20 p-24"">
+            <div class="space-y-7 flex-1">
+              <h1 class="text-6xl font-bold">Ride-one R15 V4 <br> with Smile</h1>
+              <p>Amet mllnlm mollit non deserunt ullamco est sit allqua dolor do amet sint.Vellt afficia consequat duis enim vellt mollit</p>
+              <button class="btn btn-error normal-case text-xl font-bold text-[#ececec]">PURCHASE</button>
+             </div>
+            <div>
+              <img src="/images/slider/bike4.png" class="w-[450px]" />
+            </div>
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide3" class="btn btn-circle">❮</a> 
+            <a href="#slide1" class="btn btn-circle">❯</a>
+          </div>
+           </div>
+        </div>
+      </div>
     </header>
-    <main>
+    <!-- header end -->
 
+    <main class="md:container md:mx-auto ">
     </main>
-    <footer>
-      
+    <footer class="md:container md:mx-auto">
+
     </footer>
 </body>
 </html>
