--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       theme: {
         extend: {
           colors: {
-            clifford: '#da373d',
+            clifford: '',
             'bike-primary-bg': 'rgba(231, 111, 81, 0.10)',
           }
         }
@@ -29,7 +29,7 @@
     }
   </script>  
 </head>
-<body>
+<body class="bg-white">
     <header class="md:container md:mx-auto">
       <nav class="mt-8">
         <div class="navbar bg-[#FFF] font-bold">
@@ -46,7 +46,7 @@
                 
               </ul>
             </div>
-            <a class="btn btn-ghost normal-case text-xl font-extrabold text-[#000]">Bike Dekho</a>
+            <a class="m-5 normal-case text-5xl font-extrabold  text-[#000]">Bike Dekho</a>
           </div>
           <div class="navbar-center hidden lg:flex">
             <ul class="menu menu-horizontal px-1 text-[#000] font-medium	">
@@ -66,10 +66,10 @@
       <div class="carousel w-full lg:h-[550px] bg-bike-primary-bg">
         <!-- slide-1 -->
         <div id="slide1" class="carousel-item relative w-full">
-            <div class="flex flex-col lg:flex-row lg:p-4 gap-20 p-24 ">
+            <div class="flex items-center flex-col lg:flex-row lg:p-4 gap-20 p-24 ">
               <div class="space-y-7 flex-1">
-                <h1 class="text-6xl font-bold">Ride-one R15 V4 <br> with Smile</h1>
-                <p>Amet mllnlm mollit non deserunt ullamco est sit allqua dolor do amet sint.Vellt afficia consequat duis enim vellt mollit</p>
+                <h1 class="text-6xl font-bold text-black">Ride-one R15 V4 <br> with Smile</h1>
+                <p class="text-black">Amet mllnlm mollit non deserunt ullamco est sit allqua dolor do amet sint.Vellt afficia consequat duis enim vellt mollit</p>
                 <button class="btn btn-error normal-case text-xl font-bold text-[#ececec]">PURCHASE</button>
                </div>
                <div class="flex-1">
@@ -137,7 +137,122 @@
     <!-- header end -->
 
     <main class="md:container md:mx-auto ">
+      <!-- fetured bikes -->
+      <section>
+
+      </section>
+      <!-- latest bikes -->
+      <section class="">
+        <h1 class="text-5xl m-10 text-black font-semibold text-center">latest-bike</h1>
+        <!-- latest-bike- card-1 -->
+         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 ">
+          <div class="card w-96 bg-white shadow-xl">
+            <figure><img src="/images/others/latest1.png" alt="bikes" /></figure>
+            <div class="card-body">
+              <h2 class="text-4xl font-semibold text-[#18191F]">Ducati XDIAVEL S-73</h2>
+              <p class="text-black">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <div class="card-actions">
+                <button class="btn border-none text-white bg-sky-500 hover:bg-sky-700">Read More</button>
+              </div>
+            </div>
+          </div>
+          <!-- latest-bike- card-2 -->
+          <div class="card w-96 bg-white shadow-xl">
+            <figure><img src="/images/others/latest2.png" alt="bikes" /></figure>
+            <div class="card-body">
+              <h2 class="text-4xl font-semibold text-[#18191F]">Ducati XDIAVEL S-73</h2>
+              <p class="text-black">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <div class="card-actions">
+                <button class="btn btn-error text-white">Read More</button>
+              </div>
+            </div>
+          </div>
+          <!-- latest-bike- card-3 -->
+          <div class="card w-96 bg-white shadow-xl">
+            <figure><img src="/images/others/latest3.png" alt="bikes" /></figure>
+            <div class="card-body">
+              <h2 class="text-4xl font-semibold text-[#18191F]">Ducati XDIAVEL S-73</h2>
+              <p class="text-black">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <div class="card-actions">
+                <button class="btn btn-error text-white">Read More</button>
+              </div>
+            </div>
+          </div>
+        </div> 
+      </section>
+
+      <!-- latest-bike-end -->
+
+      <section class="my-24">
+        <h1 class="text-5xl mb-12 text-black font-semibold text-center">Happy <span class="text-error">Clients Says</span></h1>
+        <div class="grid gap-8 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+          <!-- rating card-1 -->
+          <div class="card bg-base-100 p-9 border border-gray-400">
+            <figure><img src="/images/others/user-1.png" alt="Shoes" class="" /></figure>
+            <div class="card-body">
+              <p>Slate helps you see how 
+                many more days you need 
+                to work to reach your financial 
+                goal for the month and year.</p>
+              <div class="text-center">
+                <div class="rating">
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                </div>
+                <h4 class="text-info mt-2 ">Regina Milies</h4>
+                <p class="mt-2">banker</p>
+              </div>
+            </div>
+          </div>
+          <!-- rating card-2 -->
+          <div class="card bg-base-100 p-9 border border-gray-400">
+            <figure><img src="/images/others/user-2.png" alt="Shoes" class="" /></figure>
+            <div class="card-body">
+              <p>Slate helps you see how 
+                many more days you need 
+                to work to reach your financial 
+                goal for the month and year.</p>
+              <div class="text-center">
+                <div class="rating">
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"  />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"   />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                </div>
+                <h4 class="text-info mt-2 mb-2">Regina Milies</h4>
+                <p>banker</p>
+              </div>
+            </div>
+          </div>
+          <!-- rating card-3 -->
+          <div class="card bg-base-100 p-9 border border-gray-400">
+            <figure><img src="/images/others/user-3.png" alt="Shoes" class="" /></figure>
+            <div class="card-body">
+              <p>Slate helps you see how 
+                many more days you need 
+                to work to reach your financial 
+                goal for the month and year.</p>
+              <div class="text-center">
+                <div class="rating">
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                </div>
+                <h4 class="text-info mt-2 ">Regina Milies</h4>
+                <p class="mt-2">banker</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <!-- main section end -->
     <footer class="md:container md:mx-auto">
 
     </footer>
