--- a/index.html
+++ b/index.html
@@ -14,25 +14,15 @@
     .font-poppins{
       font-family: 'Poppins', sans-serif;
     }
-  </style>
-  <!-- tailwind custom classes -->
-  <script>
-    tailwind.config ={
-      theme: {
-        extend: {
-          colors: {
-            clifford: '',
-            'bike-primary-bg': 'rgba(231, 111, 81, 0.10)',
-          }
-        }
-      }
+    *{
+       
     }
-  </script>  
+  </style> 
 </head>
-<body class="bg-white">
+<body class="bg-slate-50">
     <header class="md:container md:mx-auto">
       <nav class="mt-8">
-        <div class="navbar bg-[#FFF] font-bold">
+        <div class="navbar font-bold">
           <div class="flex-1">
             <div class="dropdown">
               <label tabindex="0" class="btn btn-ghost lg:hidden">
@@ -63,7 +53,7 @@
       </nav>
 
       <!-- nav-bar-end -->
-      <div class="carousel w-full lg:h-[550px] bg-bike-primary-bg">
+      <div class="carousel w-full lg:h-[550px] bg-red-100">
         <!-- slide-1 -->
         <div id="slide1" class="carousel-item relative w-full">
             <div class="flex items-center flex-col lg:flex-row lg:p-4 gap-20 p-24 ">
@@ -142,7 +132,7 @@
 
       </section>
       <!-- latest bikes -->
-      <section class="">
+      <section class="my-24">
         <h1 class="text-5xl m-10 text-black font-semibold text-center">latest-bike</h1>
         <!-- latest-bike- card-1 -->
          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 ">
@@ -180,14 +170,13 @@
           </div>
         </div> 
       </section>
-
       <!-- latest-bike-end -->
-
+      <!-- happy clients -->
       <section class="my-24">
         <h1 class="text-5xl mb-12 text-black font-semibold text-center">Happy <span class="text-error">Clients Says</span></h1>
         <div class="grid gap-8 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
           <!-- rating card-1 -->
-          <div class="card bg-base-100 p-9 border border-gray-400">
+          <div class="card text-black p-9 border border-gray-400">
             <figure><img src="/images/others/user-1.png" alt="Shoes" class="" /></figure>
             <div class="card-body">
               <p>Slate helps you see how 
@@ -208,7 +197,7 @@
             </div>
           </div>
           <!-- rating card-2 -->
-          <div class="card bg-base-100 p-9 border border-gray-400">
+          <div class="card text-black  p-9 border border-gray-400">
             <figure><img src="/images/others/user-2.png" alt="Shoes" class="" /></figure>
             <div class="card-body">
               <p>Slate helps you see how 
@@ -229,7 +218,7 @@
             </div>
           </div>
           <!-- rating card-3 -->
-          <div class="card bg-base-100 p-9 border border-gray-400">
+          <div class="card text-black  p-9 border border-gray-400">
             <figure><img src="/images/others/user-3.png" alt="Shoes" class="" /></figure>
             <div class="card-body">
               <p>Slate helps you see how 
@@ -251,10 +240,73 @@
           </div>
         </div>
       </section>
+      <!-- FAQ -->
+      <section class="my-24">
+        <h1 class="text-5xl text-black font-semibold text-center">Frequently Asked <span class="text-error">Questions </span></h1>
+        <div class="hero min-h-screen bg-slate-50">
+          <div class="hero-content flex-col lg:gap-16 lg:flex-row">
+            <img src="/images/others/faq.png" class=" w-1/2 lg:max-w-sm rounded" />
+            <div>
+              <div class="collapse collapse-arrow  text-black">
+                <input type="radio" name="my-accordion-2" checked="checked" /> 
+                <div class="collapse-title text-2xl font-medium">What are the most important things I should
+                  know about riding a bike?
+                  <Translate text="Click to open this one and close others" />
+                </div>
+                <div class="collapse-content"> 
+                  <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow  text-black">
+                <input type="radio" name="my-accordion-2" /> 
+                <div class="collapse-title text-2xl font-medium">How can I tell if my helmet is old and I need a 
+                  new one?
+                  <Translate text="Click to open this one and close others" />
+                </div>
+                <div class="collapse-content"> 
+                  <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow  text-black">
+                <input type="radio" name="my-accordion-2" /> 
+                <div class="collapse-title text-2xl font-medium">How can I tell if my helmet is old and I need a 
+                  new one?
+                  <Translate text="Click to open this one and close others" />
+                </div>
+                <div class="collapse-content"> 
+                  <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- main section end -->
-    <footer class="md:container md:mx-auto">
-
-    </footer>
+    
+      <footer class=" footer items-center p-1 bg-neutral text-neutral-content">
+         <div class="
+         md:container md:mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 justify-between mt-8">
+          <div>
+            <p class="font-medium	mb-4">Download Now    License</p>
+            <ul class="flex gap-4 font-medium mb-4 ">
+              <li><a href="">About</a></li>
+              <li><a href="">Features</a></li>
+              <li><a href="">Pricing</a></li>
+              <li><a href="">Careers</a></li>
+              <li><a href="">Help</a></li>
+              <li><a href="">Privacy Policy</a></li>
+            </ul>
+            <p class="font-medium">© 2020 bike. All rights reserved</p>
+          </div> 
+          <div>
+            <span class="footer-title">Get the App</span> 
+            <div class="grid justify-center grid-cols-1 gap-4">
+              <a><img class="w-40" src="images/others/android.png" alt=""></a>
+              <a><img class="w-40" src="images/others/ios.png" alt=""></a>
+            </div>
+          </div>
+         </div>
+      </footer>
 </body>
 </html>
