--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       <!-- FAQ -->
       <section class="my-24">
         <h1 class="text-5xl text-black font-semibold text-center">Frequently Asked <span class="text-error">Questions </span></h1>
-        <div class="hero min-h-screen bg-slate-50">
+        <div class="hero  bg-slate-50">
           <div class="hero-content flex-col lg:gap-16 lg:flex-row">
             <img src="/images/others/faq.png" class=" w-1/2 lg:max-w-sm rounded" />
             <div>
